--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,12 +24,10 @@
         </activity>
 
 
-        <!-- Receivers to add -->
-
         <meta-data android:name="com.google.android.gms.version"
                    android:value="@integer/google_play_services_version"/>
 
-        <receiver android:name="com.tengio.cpn.CpnGcmReceiver"
+        <receiver android:name="com.tengio.cpn.CpnNotificationReceiver"
                   android:exported="true">
             <!--android:permission="com.google.android.c2dm.permission.SEND"-->
             <intent-filter>
@@ -38,7 +36,7 @@
             </intent-filter>
         </receiver>
 
-        <service android:name="com.tengio.cpn.CpnInstanceIDListenerService"
+        <service android:name="com.tengio.cpn.CpnInstanceIDService"
                  android:exported="false">
             <intent-filter>
                 <action android:name="com.google.android.gms.iid.InstanceID"/>
@@ -46,7 +44,7 @@
             </intent-filter>
         </service>
 
-        <service android:name=".RegistrationIntentService"
+        <service android:name=".RegistrationService"
                  android:exported="false">
             <intent-filter>
                 <action android:name="com.tengio.cpn.REGISTRATION_ACTION"/>
@@ -54,7 +52,7 @@
             </intent-filter>
         </service>
 
-        <service android:name=".NotificationListenerService"
+        <service android:name=".NotificationService"
                  android:exported="false">
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE"/>
