--- a/cpn/build.gradle
+++ b/cpn/build.gradle
@@ -2,12 +2,12 @@ apply plugin: 'com.android.library'
 apply plugin: 'com.jfrog.bintray'
 apply plugin: 'com.github.dcendents.android-maven'
 
-project.version = "8.4.0"
+project.version = "9.2.1"
 project.group = "com.tengio"
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    buildToolsVersion "23.0.3"
 
     defaultConfig {
         minSdkVersion 15
@@ -24,7 +24,8 @@ android {
 }
 
 dependencies {
-    compile 'com.google.android.gms:play-services-gcm:8.4.0'
+    compile 'com.google.android.gms:play-services-gcm:9.2.1'
+    compile 'com.google.firebase:firebase-core:9.2.1' //this to force firebase 9.2.1 instead of 9.0.0 coming with play services 3.0.0
     testCompile 'junit:junit:4.12'
 }
 
