--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,10 +12,29 @@ android {
         versionName "1.0"
         multiDexEnabled true
     }
+    signingConfigs {
+        debug {
+            storeFile file('../keys/keystore')
+            storePassword '8eV6MyyAPzThp47f'
+            keyAlias 'Tengio'
+            keyPassword '8eV6MyyAPzThp47f'
+        }
+        release {
+            storeFile file('../keys/keystore')
+            storePassword '8eV6MyyAPzThp47f'
+            keyAlias 'Tengio'
+            keyPassword '8eV6MyyAPzThp47f'
+        }
+    }
     buildTypes {
+        debug {
+//            manifestPlaceholders = [gcmPermission: ""]
+        }
+
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+//            manifestPlaceholders = [gcmPermission: "com.google.android.c2dm.permission.SEND"]
         }
     }
 
@@ -28,9 +47,12 @@ android {
 
 dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.google.firebase:firebase-analytics:9.0.0'
+    compile 'com.google.firebase:firebase-crash:9.4.0'
+    compile 'com.google.firebase:firebase-messaging:9.4.0'
 
     testCompile 'junit:junit:4.12'
-    compile project(path: ':cpn')
+    compile project(path: ':library')
 }
 
 apply plugin: 'com.google.gms.google-services'
