--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,12 +3,8 @@
           package="com.tengio.notifications">
 
 
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <uses-permission android:name="android.permission.INTERNET" />
-
-    <permission android:name="${applicationId}.permission.C2D_MESSAGE"
-                android:protectionLevel="signature"/>
-    <uses-permission android:name="${applicationId}.permission.C2D_MESSAGE"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application android:allowBackup="true"
                  android:icon="@mipmap/ic_launcher"
@@ -23,44 +19,18 @@
             </intent-filter>
         </activity>
 
-
-        <meta-data android:name="com.google.android.gms.version"
-                   android:value="@integer/google_play_services_version"/>
-
-        <receiver android:name="com.tengio.cpn.CpnNotificationReceiver"
-                  android:exported="true">
-            <!--android:permission="com.google.android.c2dm.permission.SEND"-->
+        <service android:name="com.tengio.notifications.RegistrationService">
             <intent-filter>
-                <action android:name="com.google.android.c2dm.intent.RECEIVE"/>
-                <category android:name="${applicationId}"/>
-            </intent-filter>
-        </receiver>
-
-        <service android:name="com.tengio.cpn.CpnInstanceIDService"
-                 android:exported="false">
-            <intent-filter>
-                <action android:name="com.google.android.gms.iid.InstanceID"/>
-                <category android:name="${applicationId}"/>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
             </intent-filter>
         </service>
 
-        <service android:name=".RegistrationService"
-                 android:exported="false">
+        <service android:name="com.tengio.notifications.NotificationService">
             <intent-filter>
-                <action android:name="com.tengio.cpn.REGISTRATION_ACTION"/>
-                <category android:name="${applicationId}"/>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
             </intent-filter>
         </service>
 
-        <service android:name=".NotificationService"
-                 android:exported="false">
-            <intent-filter>
-                <action android:name="com.google.android.c2dm.intent.RECEIVE"/>
-                <category android:name="${applicationId}"/>
-            </intent-filter>
-        </service>
-
-        <!-- Receivers to add -->
     </application>
 
 </manifest>
