--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,12 +47,12 @@ android {
 
 dependencies {
     compile 'com.android.support:appcompat-v7:25.0.1'
-    compile 'com.google.firebase:firebase-analytics:10.0.0'
-    compile 'com.google.firebase:firebase-crash:10.0.0'
-    compile 'com.google.firebase:firebase-messaging:10.0.0'
+    compile 'com.google.firebase:firebase-analytics:10.0.1'
+    compile 'com.google.firebase:firebase-crash:10.0.1'
+    compile 'com.google.firebase:firebase-messaging:10.0.1'
 
     testCompile 'junit:junit:4.12'
-    compile project(path: ':library')
+    compile project(path: ':cpn')
 }
 
 apply plugin: 'com.google.gms.google-services'
