--- a/cpn/build.gradle
+++ b/cpn/build.gradle
@@ -1,19 +1,19 @@
 apply plugin: 'com.android.library'
 apply plugin: 'com.jfrog.bintray'
-apply plugin: 'com.github.dcendents.android-maven'
+apply from: 'https://raw.githubusercontent.com/Tengio/tengio-bintray-script/master/bintray.gradle'
 
-project.version = "9.2.1"
+project.version = "10.2.0_gcm"
 project.group = "com.tengio"
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.2"
 
     defaultConfig {
         minSdkVersion 15
-        targetSdkVersion 23
+        targetSdkVersion 25
         versionCode 2
-        versionName "8.4.0"
+        versionName "10.2.0_gcm"
     }
     buildTypes {
         release {
@@ -24,22 +24,18 @@ android {
 }
 
 dependencies {
-    compile 'com.google.android.gms:play-services-gcm:9.2.1'
-    compile 'com.google.firebase:firebase-core:9.2.1' //this to force firebase 9.2.1 instead of 9.0.0 coming with play services 3.0.0
+    compile 'com.google.android.gms:play-services-gcm:10.2.0'
+    compile 'com.google.firebase:firebase-core:10.2.0' //this to force firebase 9.2.1 instead of 9.0.0 coming with play
+    // services 3.0.0
+
     testCompile 'junit:junit:4.12'
 }
 
 
 
 bintray {
-    user = BINTRAY_USER
-    key = BINTRAY_KEY
-    configurations = ['archives']
     pkg {
-        repo = 'maven'
         name = 'cpn'
-        userOrg = 'tengioltd'
-        licenses = ['Apache-2.0']
         vcsUrl = 'https://github.com/Tengio/cpn.git'
     }
 }
