updated firebase version to 10.2.0

--- a/cpn/build.gradle
+++ b/cpn/build.gradle
@@ -2,18 +2,18 @@ apply plugin: 'com.android.library'
 apply plugin: 'com.jfrog.bintray'
 apply plugin: 'com.github.dcendents.android-maven'
 
-project.version = "10.0.1"
+project.version = "10.2.0"
 project.group = "com.tengio"
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    compileSdkVersion 25
+    buildToolsVersion '25.0.2'
 
     defaultConfig {
         minSdkVersion 15
-        targetSdkVersion 23
-        versionCode 5
-        versionName "10.0.1"
+        targetSdkVersion 25
+        versionCode 6
+        versionName "10.2.0"
     }
     buildTypes {
         release {
@@ -24,7 +24,7 @@ android {
 }
 
 dependencies {
-    compile 'com.google.firebase:firebase-messaging:10.0.1'
+    compile 'com.google.firebase:firebase-messaging:10.2.0'
 
     testCompile 'junit:junit:4.12'
 }
