--- a/cpn/build.gradle
+++ b/cpn/build.gradle
@@ -2,18 +2,18 @@ apply plugin: 'com.android.library'
 apply plugin: 'com.jfrog.bintray'
 apply from: 'https://raw.githubusercontent.com/Tengio/tengio-bintray-script/master/bintray.gradle'
 
-project.version = "10.2.0"
+project.version = "10.3.0"
 project.group = "com.tengio"
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion '25.0.2'
+    compileSdkVersion 27
+    buildToolsVersion '27.0.3'
 
     defaultConfig {
         minSdkVersion 15
-        targetSdkVersion 25
+        targetSdkVersion 27
         versionCode 6
-        versionName "10.2.0"
+        versionName "10.3.0"
     }
     buildTypes {
         release {
@@ -24,9 +24,10 @@ android {
 }
 
 dependencies {
-    compile 'com.google.firebase:firebase-messaging:10.2.0'
+    implementation 'com.google.firebase:firebase-core:16.0.1'
+    implementation 'com.google.firebase:firebase-messaging:17.0.0'
 
-    testCompile 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.12'
 }
 
 bintray {
