upped to version 10.4.0

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,11 +47,18 @@ android {
 
 dependencies {
     implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.google.firebase:firebase-analytics:16.0.1'
-    implementation 'com.google.firebase:firebase-core:16.0.1'
-    implementation 'com.google.firebase:firebase-crash:16.0.1'
-    implementation 'com.google.firebase:firebase-messaging:17.0.0'
-
+    implementation ('com.google.firebase:firebase-analytics:16.0.1'){
+        exclude module: 'support-v4'
+    }
+    implementation ('com.google.firebase:firebase-core:16.0.1'){
+        exclude module: 'support-v4'
+    }
+    implementation ('com.google.firebase:firebase-crash:16.0.1'){
+        exclude module: 'support-v4'
+    }
+    implementation ('com.google.firebase:firebase-messaging:17.0.0'){
+        exclude module: 'support-v4'
+    }
     testImplementation 'junit:junit:4.12'
     implementation project(path: ':cpn')
 }
