--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 27
+    buildToolsVersion '27.0.3'
 
     defaultConfig {
         applicationId "com.tengio.notifications"
         minSdkVersion 17
-        targetSdkVersion 25
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
@@ -27,10 +27,15 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:25.2.0'
-
-    testCompile 'junit:junit:4.12'
-    compile project(path: ':cpn')
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation ('com.google.android.gms:play-services-gcm:15.0.1'){
+        exclude module: 'support-v4'
+    }
+    implementation ('com.google.firebase:firebase-core:16.0.1'){
+        exclude module: 'support-v4'
+    }
+    testImplementation 'junit:junit:4.12'
+    implementation project(path: ':cpn')
 }
 
 apply plugin: 'com.google.gms.google-services'
