--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 27
-    buildToolsVersion '28.0.3'
+    compileSdkVersion 29
+    buildToolsVersion '29.0.2'
 
     defaultConfig {
         applicationId "com.tengio.notifications"
         minSdkVersion 17
-        targetSdkVersion 27
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
@@ -46,14 +46,14 @@ android {
 }
 
 dependencies {
-    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation ('com.google.firebase:firebase-analytics:16.0.6'){
         exclude module: 'support-v4'
     }
     implementation ('com.google.firebase:firebase-core:16.0.6'){
         exclude module: 'support-v4'
     }
-    implementation ('com.google.firebase:firebase-messaging:17.3.4'){
+    implementation ('com.google.firebase:firebase-messaging:20.1.0'){
         exclude module: 'support-v4'
     }
     testImplementation 'junit:junit:4.12'
